--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -30,6 +30,7 @@
   <label>Select Plate Type:</label>
   <select id="plateType">
     <option value="default">Default</option>
+    <option value="default_next"> Default Next</option>
     <option value="manual">Manual</option>
   </select>
 
